# ai-agents-for-supplier-risk-assessment

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.in
.doc/: Questions_projet_1.xlsx  ai-gen1.md  retranscris en texte cet audio complet, stp. (1).md  sujet-du-client.md
app/: __init__.py
app/cli/: __init__.py  main.py
app/configs/: __init__.py  allowlist_domains.yml  init_schema.sql  settings.py  suppliers_seed.yml  thresholds.yml  weights.yml
app/crew/: __init__.py  agents.py  crew.py  tasks.py
app/golden/: __init__.py
app/golden/cases/: SUP-002_financial.txt  SUP-003_news.txt  SUP-005_bodacc.txt  SUP-005_financial.txt
app/golden/expected/: SUP-002_expected.yml  SUP-005_expected.yml
app/observability/: __init__.py  audit.py  logger.py
app/pipelines/: __init__.py  run_daily.py  steps.py
app/schemas/: __init__.py  financial_output.py
app/tools/: __init__.py  cache.py  db.py  exporter.py  json_validate.py  llm_client.py  notifier.py  rate_limit.py  robots.py  scoring_rules.py  web_fetch.py  web_parse.py
docker/: docker-compose.yml
scripts/: bootstrap.sh  cron_example.txt  run_local.sh
tests/: __init__.py  test_db.py  test_financial_golden.py  test_idempotence.py  test_schema.py  test_scoring_rules.py  test_scraping_policy.py
